# MovementPatternsClassifier

./: .flake8  .pre-commit-config.yaml  1.txt  README.md  pyproject.toml
.dvc/: config
mpproject/data/initial_data/: data.csv.dvc
mpproject/data/prepared_data/: prepared_data.csv.dvc
mpproject/models/: calibrate.py  conformal.py  constants.py  data_utils.py  models.py  predict.py  split_data.py  train.py
mpproject/models/files/splits/: .gitignore  X_calib.npy.dvc  X_test.npy.dvc  X_train.npy.dvc  X_val.npy.dvc  y_calib.npy.dvc  y_test.npy.dvc  y_train.npy.dvc  y_val.npy.dvc
mpproject/models/files/weights/: .gitignore  GRU_trained.pt  GRU_trained.pt.dvc
mpproject/models/files/weights/GRU_calibrated/: .gitignore  checkpoint_500  checkpoint_500.dvc
mpproject/notebooks/: notebook.ipynb
mpproject/src/app/: generate_test.py  main.py
mpproject/src/app/static/: generated.html  index.html
mpproject/src/data/: generate_data.py  path_constants.py  preprocess_data.py  utils.py
