[tool.poetry]
name = "mpproject"
version = "0.1.0"
description = ""
authors = ["Fedorov Vladislav <fedorovvladislav481@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
dvc = "^3.47.0"
tensorflow-io-gcs-filesystem = "0.31.0"
aws-fortuna = "^0.1.45"
pandas = "^2.2.1"
numpy = "^1.26.4"
torch = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
kneed = "^0.8.5"
pyod = "^1.1.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "19.10b0"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
force_grid_wrap = 2
profile = "black"

[tool.pylint.format]
max-line-length = "79"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
