[tool.poetry]
name = "mpproject"
version = "0.1.0"
description = ""
authors = ["Fedorov Vladislav <fedorovvladislav481@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
dvc = "^3.47.0"
tensorflow-io-gcs-filesystem = "0.31.0"
aws-fortuna = "0.1.40"
pandas = "^2.2.1"
numpy = "^1.26.4"
torch = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
kneed = "^0.8.5"
pyod = "^1.1.3"
seaborn = "^0.13.2"
wandb = "^0.16.3"
focal-loss-torch = "^0.1.2"
pytorch-warmup = "^0.1.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
jax = "0.4.23"
jaxlib = "0.4.23"


[tool.poetry.group.dev.dependencies]
black = "19.10b0"

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
force_grid_wrap = 2
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
